Updated settings page and popup dark mode (issue #132)

--- a/src/options/styles.css
+++ b/src/options/styles.css
@@ -51,6 +51,10 @@ Colors
 /*
 Body style
 */
+html {
+  background-color: inherit;
+}
+
 body {
   color: var(--text-color);
   user-select: none;
@@ -58,6 +62,10 @@ body {
 
 pre, code{
   white-space:pre-line;
+}
+
+a {
+  text-decoration: underline;
 }
 
 /********************************************************/
@@ -127,12 +135,12 @@ input[type="radio"] {
 input[type="radio"]:checked {
   transition: all ease 0.25s;
   background-image: var(--accent-color);
-  box-shadow: 0 6px 12px var(--accent-color-lighter-60);
+  box-shadow: 0 4px 8px var(--accent-color-lighter-60);
 }
 
 input[type="radio"]:hover:not(:checked) {
   transition: all ease 0.25s;
-  box-shadow: 0 6px 12px var(--accent-color-lighter-60);
+  box-shadow: 0 4px 8px var(--accent-color-lighter-60);
   border-color: transparent;
 }
 
@@ -174,6 +182,13 @@ input[type="radio"]:hover:not(:checked) {
   color: white;
   box-shadow: 0 6px 12px var(--accent-color-lighter-60);
   transition: all ease 0.25s;
+}
+
+.button:hover {
+  background-color: #df3131 !important;
+  border: 1px solid #df3131 !important;
+  transition: all 0.3s ease;
+  color: #FFF !important;
 }
 
 /********************************************************/
